.nodeshift/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: nodejs-rest-http-crud-redhat
spec:
  template:
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
             secretKeyRef:
               name: my-database-secret
               key: user
        - name: DB_PASSWORD
          valueFrom:
             secretKeyRef:
               name: my-database-secret
               key: password
        readinessProbe:
          httpGet:
            path: /api/health/readiness
            port: 8080
            scheme: HTTP
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /api/health/liveness
            port: 8080
            scheme: HTTP
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
